--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Home>
-            <h1>Love Running</h1>
+        <a href="index.html"><h1>Love Running</h1>
         </a>
         <nav>
             <ul>
