--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Love Running</h1>
+        <a href="index.html">
+            <h1 íd="Logo">Love Running</h1>
         </a>
         <nav>
             <ul>
