--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
                      <a href="#">Gallery</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>Main Image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
+    </section>
     <section>Club Ethos</section>
     <section>Running locations, distances and times</section>
     <footer>social links here</footer>
